# dev-utils

./: components.json  index.html  package.json  vite.config.ts
public/: splash-screen.html
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: clipboard.json  opener.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: bookmark.rs  clipboard.rs  crypto.rs  mod.rs  splashscreen.rs  system_setting.rs
src-tauri/src/services/: app_dirs.rs  favicon.rs  mod.rs
src/core/: bootstrap.tsx  index.css  mini-app-registry.ts  mini-app-registry.tsx
src/main-app/: dashboard.tsx  not-found.tsx  routes.tsx  splash-screen-closer.tsx  state.tsx
src/mini-apps/animate-code/: routes.tsx
src/mini-apps/animate-code/screens/: animate-code.tsx  animate-slide.tsx  code-editor.tsx  flatten-ast-framer-motion-structure.tsx  home-screen.tsx  landing-v2-screen.tsx  slider.tsx  (+3 more)
src/mini-apps/base64-decoder/: index.ts
src/mini-apps/bookmark-manager/: routes.tsx
src/mini-apps/css-color-converter/: index.ts  routes.tsx
src/mini-apps/data-generator/: index.ts
src/mini-apps/demo/: index.tsx  routes.tsx  screen-a.tsx  screen-b.tsx
src/mini-apps/jwt-decoder/: index.ts
src/mini-apps/lorem-generator/: index.ts
src/mini-apps/qr-code-generator/: index.ts
src/mini-apps/regex-tester/: index.ts
src/mini-apps/text-case-converter/: index.ts
src/mini-apps/unix-timestamps-converter/: index.ts
src/mini-apps/url-decoder/: index.ts  routes.tsx
src/mini-apps/uuid-generator/: index.ts
src/utils/: is-desktop-mode.ts
(+157 files in other folders)
