[package]
name = "app"
version = "0.0.0-beta.20260105"
description = "A Collection Of Developer Tools"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-prevent-default = "4"
tauri-plugin-clipboard = { git = "https://github.com/CrossCopy/tauri-plugin-clipboard", branch = "v2" }
sha2 = { version = "0.10.9" }
hex = "0.4"
enigo = "0.6.1"
reqwest = { version = "0.12.25" }
url = { version = "2.5.7" }
scraper = { version = "0.25.0" }
base64 = { version = "0.22.1" }
tauri-plugin-opener = "2"
